# OneSparse-Rust

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: test.yml
include/: GraphBLAS.h
src/: lib.rs
src/compiler/: backend.rs  cache.rs  cranelift_backend.rs  mod.rs
src/core/: binary_op.rs  container.rs  error.rs  handles.rs  index_binary_op.rs  index_unary_op.rs  matrix.rs  mod.rs  monoid.rs  scalar.rs  semiring.rs  unary_op.rs  vector.rs
src/ffi/: binary_op.rs  error.rs  index_binary_op.rs  index_unary_op.rs  matrix.rs  mod.rs  monoid.rs  scalar.rs  semiring.rs  types.rs  unary_op.rs  vector.rs
src/ir/: builder.rs  graph.rs  interpreter.rs  mod.rs  node.rs  shape.rs  types.rs
src/lisp/: ast.rs  compiler.rs  completer.rs  eval.rs  highlighter.rs  kernel.rs  mod.rs  parser.rs  types.rs  validator.rs
src/ops/: apply.rs  descriptor.rs  ewise.rs  matmul.rs  mod.rs
src/optimizer/: cse.rs  format_select.rs  fusion.rs  mod.rs  pass.rs
src/types/: mod.rs
tests/: README.md  e2e_operations.rs  jit_spmv.rs  lisp_advanced.lisp  lisp_comprehensive.lisp  lisp_examples.lisp  lisp_integration.rs  type_system.rs
tests/lisp/: basic.lisp  semirings.lisp
